mule-user-guide/v/3.7/logger-component-reference.adoc
= Logger Component Reference
:keywords: mule, esb, studio, logger, logs, log, notifications, errors, debug

Use the Logger to log messages such as error messages, status notifications, or exceptions. You can add a logger anywhere in a flow, and you can configure it to log anything: any string, any Mule expression, or any combination of strings and Mule expressions.

== Configuration

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

image:logger.png[logger]

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Field |Value |Description |Example XML
|*Display Name* |Logger |Customize to display a unique name for the logger in your application. a|
[source, code, linenums]
----
doc:name="Logger"
----
|*Message* |String or Mule expression |Specify what Mule should log. By default, messages are logged to the console in Mule Studio. a|
[source, code, linenums]
----
message="Current payload is #[payload]"
----
|*Level* a|
Select a level from the listed options:

* ERROR
* WARN
* INFO
* DEBUG
* TRACE

 a|
Specify the level at which the message should be logged.

By default, Mule Studio will not log messages at the DEBUG or TRACE level to the console unless you create and configure a `log4j.properties` file in `src/main/resources` to lower the log level.

You can create this file automatically through Studio by right-clicking on your project in the package explorer, and selecting *Mule > Create Log4j Configuration*. Then you can find a `log4j2.xml` file in your project's `src/main/resources` folder and edit it through Studio.


a|
[source, code, linenums]
----
level="INFO"
----

|*Category* |_Optional_ _._ String |Optionally specify a category name and configure it in the `log4j.properties` file to behave per your use case. For example, you can route log messages based on category or set log levels based on category. a|
[source, code, linenums]
----
category="MyCustomCategory"
----
|===

....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
# A logger set to monitor message processing status
<logger category="monitoring" message="Message #[payload.id] processed successfully" level="INFO" doc:name="Monitoring Logger"/>

# A logger set to record the processing time of a flow
<logger category="performance" message="Message #[payload.id] took #[flowVars['processingTime']] milliseconds to process" level="INFO" doc:name="Performance Logger"/>
----

[cols=",",options="header",]
|===
|Element |Description
|*logger* |Use the Logger to log messages such as error messages, status notifications, or exceptions to the application's log file.
|===

[width="100%",cols="50%,50%",options="header",]
|===
|Element Attribute |Description
|*message* |Specify what Mule should log. Supports expressions.
|*level* |Select one of the following levels: ERROR, WARN, INFO, DEBUG, or TRACE. If no level attribute is set, the logger will log at the DEBUG level.
|*category* |_Optional_. Specify categories to route log entries according to business needs. Configure the categories in your log4j.properties file.
|*doc:name* a|
Customize to display a unique name for the logger in your application.

Note: Attribute not required in Mule Standalone configuration.

|===

....
------

[TIP]
====
Rather than specifying a single Mule expression in your logger message, you can embed as many expressions as you required for your use case. This allows you to give some context to what is being logged, and enables you to log multiple things at once.

For example:

[source, xml, linenums]
----
<logger message="Current payload is #[payload] and message id is #[message.id]" level="INFO" doc:name="Logger"/>
----
====

== Configuring Custom Logging Settings

By default, the logger is set to log messages asynchronously and at a level greater than or equal to INFO, and thus will discard log messages at the DEBUG or TRACE level.

[WARNING]
As from Mule runtime 3.6.0, Log4j1 has been replaced by Log4j2 as the backend tool for managing loggings. This implies some backwards compatibility issues as the necessary configuration files in this new framework are different. Log4j2 also allows for asynchronous logging, which wasn't previously available, and Mule now implements this by default, as it implies a substantial improvement in performance.

If you need to use synchronized logging, change where to send the logs, adjust the logging level, or define custom categories, you can configure these properties in an XML file that specifies how the logger behaves, otherwise, you will be using the default properties.

For instructions on how to edit these settings, see link:/mule-user-guide/v/3.7/logging-in-mule[Logging in Mule].

== See Also

* Read more about link:/mule-user-guide/v/3.7/logging-in-mule[Logging in Mule].
* Check the link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language] reference for more ideas on how to format helpful logger messages.
